[tool.poetry]
name = "repl_python3_beta_Discord-Nitro-Generator-and-Checker"
version = "0.1.0"
description = ""
authors = ["ItsNyoty <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord-webhook = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
